--- a/index.html
+++ b/index.html
@@ -3,17 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=>, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=!, initial-scale=1.0">
+    <title>Dashboard</title>
 </head>
-<body>
-    <p><b>Hello</b>World!</p>
-    <p><i>Hello</i>World!</p>
-    <p><u>Hello</u>World!</p>
-    <P><b><i><u>Hello</u></i></b>World!</P>
-    <p><small>Hello</small>World!</p>
-    <p><big>Hello</big>World</p>
-    <p>H<sub>2</sub>0</p>
-    <p>X=Y<sup>2</sup>+Z<sup>2</sup>
+   
+ <body leftmargin="500">
+<h1>Dashboard</h1>
+  
+
+ <hr>
+
+
+<h1>Personal Information</h1>
+  <ul>
+   <li><a href="2index.html" target="_blank">Resume</a></li>
+   <li><a href="3index.html" target="_blank" >Profile</a></li>
+  </ul>
+
+
+ <hr>
+
+
+<h1>Social Links</h1>
+  <ul>
+   <li><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
+   <li><a href="https://www.youtube.com/" target="_blank" >Youtube</a></li>
+   <li><a href="https://www.twitter.com/" target="_blank" >Twitter</a></li>
+   <li><a href="https://www.LinkedIn.com/" target="_blank" >LinkedIn</a></li>
+   <li><a href="https://www.github.com/" target="_blank" >Github</a></li>
+  </ul>
+
 </body>
 </html>
