--- a/02index.html
+++ b/02index.html
@@ -15,7 +15,7 @@
     
   
 <h1>Summary</h1>
-   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit tempora perspiciatis aliquam quis a ipsam placeat accusamus debitis ut similique? Magnam nulla non ipsa quos omnis eaque dicta cumque ut? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit tempora perspiciatis aliquam quis a ipsam placeat accusamus debitis ut similique? Magnam nulla non ipsa quos omnis eaque dicta cumque ut? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit tempora perspiciatis aliquam quis a ipsam placeat accusamus debitis ut similique? Magnam nulla non ipsa quos omnis eaque dicta cumque ut?</p>
+<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi dolorem necessitatibus ea sunt laborum quam assumenda dolorum labore, voluptatem quo, ex numquam ab beatae. Architecto animi itaque illo aliquam labo Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi dolorem necessitatibus eborum quam assumenda dolorum labore, voluptatem quo, ex numquam ab beatae. Architecto animi itaque illo aliquam labo Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi dolorem necessitatibus ea sunt laborum quam assumenda dolorum labore, voluptatem quo, ex numquam ab beatae. Architecto animi itaque illo aliquam labo</prum?>
 
 
 <h1>Skills</h1>
@@ -34,7 +34,7 @@
    <p><b>Dominican College of Tarlac</b> (2020 to up to present)</p>
     
 <h2>Secondary</h2>
-   <p><b>International Academy of Management in Economics</b> (2017-2019</p>
+   <p><b>International Academy of Management in Economics</b> (2017-2019)</p>
    <p><b>Strand:</b>&nbsp;&nbsp;Home Economics</p>
 
  <hr>
