--- a/03index.html
+++ b/03index.html
@@ -104,7 +104,7 @@
   <a href=""><h4 align="right">Back to top</h4></a>
 
 <h3><a name="Hardware">Hardware</a></h3>
-   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi dolorem necessitatibus ea sunt laborum quam assumenda dolorum labore, voluptatem quo, ex numquam ab beatae. Architecto animi itaque illo aliquam labo Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi dolorem necessitatibus eborum quam assumenda dolorum labore, voluptatem quo, ex numquam ab beatae. Architecto animi itaque illo aliquam labo Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi dolorem necessitatibus ea sunt laborum quam assumenda dolorum labore, voluptatem quo, ex numquam ab beatae. Architecto animi itaque illo aliquam labo</prum?>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni assumenda placeat itaque consequatur natus earum similique explicabo laborum qui aspernatur sit amet, architecto quo quam, sed aperiam excepturi ratione illo?</p>
 
   <ul>
      <li><a>Hardware Technology 1</a></li>
